whitespace fix

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -115,7 +115,7 @@ html {
     letter-spacing: -3px;
   }
   @media (max-width: 990px) {
-    padding-top: 3.5rem;
+    padding-top: 5rem;
   }
 }
 .h {
@@ -169,6 +169,7 @@ html {
   grid-template-columns: repeat(14, minmax(0, 1fr));
   @media (max-width: 990px) {
     width: 100%;
+    padding: 0 0;
   }
 }
 .paragraph {
@@ -176,7 +177,6 @@ html {
   grid-column: span 7;
   @media (max-width: 990px) {
     grid-column: span 14;
-    margin-bottom: 0.5rem;
   }
 }
 .socials {
@@ -192,7 +192,7 @@ html {
   }
   @media (max-width: 990px) {
     grid-column: span 14;
-    padding: 1rem 0;
+    padding: 2.5rem 0;
   }
 
   & > span {
